[package]
name = "fhe-when2meet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
jsonrpsee = "0.24.0"
phantom-zone = { git = "https://github.com/br-wa/phantom-zone", features = ["non_interactive_mp"]}
rand = "0.8.5"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
